fix mistakes on mobile

--- a/assets/css/settings.css
+++ b/assets/css/settings.css
@@ -73,7 +73,7 @@ img {
 }
 
 .containerWrap {
-  max-width: 260px;
+  max-width: 275px;
   margin: 0 auto;
 }
 
@@ -385,7 +385,7 @@ img {
   border-radius: 20px;
   padding: 29px;
   background-color: rgba(217, 217, 217, 0.5);
-  width: 230px;
+  width: 275px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -395,10 +395,10 @@ img {
 .title-settings {
   font-family: var(--font-family);
   font-weight: 400;
-  font-size: 32px;
+  font-size: 30px;
   text-align: center;
   color: #000;
-  width: 170px;
+  width: 215px;
   border-bottom: 1px solid #000;
   padding-bottom: 24px;
 }
